fixed label for name

--- a/src/main/webapp/partials/home.html
+++ b/src/main/webapp/partials/home.html
@@ -20,7 +20,7 @@
     <h1>Welcome to SIA App Challenge!</h1>
 
     <div>
-        <p>Please submit a request</p>
+        <p>Please submit a request:</p>
     </div>
 
     <!-- Standard HTML form, with the submit function bound to the register() function defined in the the controller -->
